--- a/se1.bestellsystem/resources/application.properties
+++ b/se1.bestellsystem/resources/application.properties
@@ -1,5 +1,5 @@
 data.path = data
 data.customers = customers.json
-#data.articles = articles.json
-data.articles = articles_price_update.json
+data.articles = articles.json
+#data.articles = articles_price_update.json
 data.orders = orders.json
